[package]

name = "rump"
version = "0.1.0"
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Text snippets on the command line."
readme = "README.md"
repository = "https://github.com/jimmycuadra/rump"
license = "MIT"

[dependencies]

getopts = ">= 0.2.4"
rustc-serialize = ">= 0.2.12"

[[bin]]

name = "rump"
path = "src/main.rs"
test = false
doctest = false

[lib]

name = "rump"
path = "src/lib.rs"
test = false
doctest = false
